test/expected/explain_efi-c.out
explain enum E : int x
                 ^
18: error: enum with underlying type is not supported in C
